# digiforest_drs

./: .flake8  .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
digiforest_analysis/: CMakeLists.txt  package.xml  setup.py
digiforest_analysis/notebooks/: autonomy_plots.ipynb  mission_plotting.ipynb  tree_analysis.ipynb  tree_reconstruction.ipynb  tree_segmentation.ipynb
digiforest_analysis/scripts/: generate_height_maps.py  offline_pipeline.py  segment_ground.py
digiforest_analysis/scripts/experimental/: cluster_voronoi.py  generate_height_maps.py  segment_ground.py
digiforest_analysis/src/digiforest_analysis/: __init__.py  ground_segmentation.py  pipeline.py  plotting.py  terrain_mapping.py
digiforest_analysis/src/digiforest_analysis/tasks/: __init__.py  base_task.py  forest_analysis.py  ground_segmentation.py  preprocessing.py  temporal_analysis.py  terrain_fitting.py  tree_analysis.py  tree_reconstruction.py  tree_segmentation.py  tree_segmentation_voronoi.py
digiforest_analysis/src/digiforest_analysis/tasks/pcl/: ground_segmentation.py  tree_segmentation.py
digiforest_analysis/src/digiforest_analysis/utils/: __init__.py  clustering.py  cylinder.py  debug_gui.py  distances.py  io.py  loss.py  marteloscope.py  matrix_calc.py  meshing.py  pcd.py  plotting.py  timing.py  visualization.py
digiforest_analysis/tests/: test_cylinder.py
digiforest_analysis_ros/: CMakeLists.txt  package.xml  setup.py
digiforest_analysis_ros/config/: digiforest_analysis_config.yaml
digiforest_analysis_ros/launch/: anymal_mission_analysis.launch  forest_analysis.launch  forest_ananlysis.launch  mission_analysis.launch  mission_analysis_legacy.launch
digiforest_analysis_ros/notebooks/: mission_plotting.ipynb
digiforest_analysis_ros/scripts/: forest_analysis_node.py  mission_analysis_node.py
digiforest_analysis_ros/scripts/experimental/: tree_manager_state_plotter.py
digiforest_analysis_ros/src/digiforest_analysis_ros/: __init__.py  forest_analysis.py  mission_analysis.py  utils.py
digiforest_analysis_ros/src/digiforest_analysis_ros/tests/: test_forest_analysis.py
digiforest_analysis_ros/srv/: TreeToggler.srv
digiforest_registration/: CMakeLists.txt  package.xml  setup.py
digiforest_registration/scripts/: registration.py
digiforest_registration/src/digiforest_registration/: __init__.py
digiforest_registration/src/digiforest_registration/tasks/: __init__.py  height_image.py  horizontal_alignment.py  vertical_alignment.py
digiforest_registration/src/digiforest_registration/utils/: __init__.py  load_cloud.py
digiforest_slam_logger/: CMakeLists.txt  package.xml
digiforest_slam_logger/include/slam_logger/: slam_logger_tools.hpp
digiforest_slam_logger/launch/: slam_logger_anymal.launch
digiforest_slam_logger/src/slam_logger/: slam_logger_node.cpp
digiforest_tiling/: CMakeLists.txt  README.md  package.xml
digiforest_tiling/include/digiforest_tiling/: gnss_handler.hpp  slam_mission.hpp
digiforest_tiling/launch/: generate_tiles.launch
digiforest_tiling/src/: generate_tiles.cpp  gnss_handler.cpp  slam_mission.cpp
include/slam_logger/: slam_logger_tools.hpp
launch/: slam_logger_frontier.launch
scripts/: setup-director.sh
src/digiforest_drs/: __init__.py  digiforest_drs.py  generate_height_maps.py
src/slam_logger/: slam_logger_node.cpp  slam_logger_tools.cpp
src/tools/: generate_mesh.cpp
