<?xml version="1.0"?>
<package format="2">
  <name>digiforest_drs</name>
  <version>0.0.0</version>
  <description>The digiforest_drs package</description>

  <maintainer email="mfallon@todo.todo">mfallon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <export>
  </export>
</package>
