<?xml version="1.0"?>
<package format="2">
  <name>digiforest_analysis_ros</name>
  <version>0.0.0</version>
  <description>The digiforest_analysis_ros package</description>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>ros2raw</depend>
  <depend>tf_conversions</depend>
  <depend>vilens_msgs</depend>
  <depend>vilens_slam_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
  </export>
</package>
