<?xml version="1.0"?>
<package format="2">
  <name>digiforest_tiling</name>
  <version>0.0.0</version>
  <description>The digiforest_tiling package</description>

  <maintainer email="todo@todo.todo">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf_conversions</depend>
  <export>
  </export>
</package>
